--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
+                    <video src="riya_sample.mp4" controls></video>
+                </div>
+                <div class="swiper-slide">
                     <video src="sample  (1).mp4" controls></video>
                 </div>
                 <div class="swiper-slide">
