added navigate icon up and down arrow

--- a/index.html
+++ b/index.html
@@ -8,32 +8,38 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <div class="main">
+        <h2>Welcome to our cutetube..</h2>
         <div class="slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <video src="riya_sample.mp4" controls></video>
+                    <video src="riya_sample.mp4" controls loop autoplay muted></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (1).mp4" controls></video>
+                    <video src="sample  (1).mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (2).mp4" controls></video>
+                    <video src="sample  (2).mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (3).mp4" controls></video>
+                    <video src="sample  (3).mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (4).mp4" controls></video>
+                    <video src="sample  (4).mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (5).mp4" controls></video>
+                    <video src="sample  (5).mp4" controls loop></video>
                 </div>
             </div>
         </div>
+        <div class="navigate">
+                <i class="fa-solid fa-arrow-up up"></i>
+                <i class="fa-solid fa-arrow-down down"></i>
+            </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
