added more video

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
         <div class="slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <video src="riya_sample.mp4" controls loop autoplay muted></video>
+                    <video src="paper.mp4" controls loop autoplay muted></video>
+                </div>
+                <div class="swiper-slide">
+                    <video src="comedy.mp4" controls loop></video>
+                </div>
+                <div class="swiper-slide">
+                    <video src="reaction.mp4" controls loop></video>
+                </div>
+                <div class="swiper-slide">
+                    <video src="riya_sample.mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
                     <video src="sample  (1).mp4" controls loop></video>
