--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -17,38 +19,44 @@
         <div class="slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <video src="paper.mp4" controls loop autoplay muted></video>
+                    <video src="video/paper.mp4" controls autoplay muted></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="comedy.mp4" controls loop></video>
+                    <iframe src="https://www.youtube.com/embed/fjlQaBS0voo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen autoplay muted controls></iframe>
                 </div>
                 <div class="swiper-slide">
-                    <video src="reaction.mp4" controls loop></video>
+                    <iframe width="100%" height="99%" src="https://www.youtube.com/embed/WdqrbUGAWGs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="swiper-slide">
-                    <video src="riya_sample.mp4" controls loop></video>
+                    <video src="video/comedy.mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (1).mp4" controls loop></video>
+                    <video src="video/reaction.mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (2).mp4" controls loop></video>
+                    <video src="video/riya_sample.mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (3).mp4" controls loop></video>
+                    <video src="video/sample  (1).mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (4).mp4" controls loop></video>
+                    <video src="video/sample  (2).mp4" controls loop></video>
                 </div>
                 <div class="swiper-slide">
-                    <video src="sample  (5).mp4" controls loop></video>
+                    <video src="video/sample  (3).mp4" controls loop></video>
+                </div>
+                <div class="swiper-slide">
+                    <video src="video/sample  (4).mp4" controls loop></video>
+                </div>
+                <div class="swiper-slide">
+                    <video src="video/sample  (5).mp4" controls loop></video>
                 </div>
             </div>
         </div>
         <div class="navigate">
-                <i class="fa-solid fa-arrow-up up"></i>
-                <i class="fa-solid fa-arrow-down down"></i>
-            </div>
+            <i class="fa-solid fa-arrow-up up"></i>
+            <i class="fa-solid fa-arrow-down down"></i>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
